Update .env configuration with new server IDs and channels

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ API_PORT=8001
 DEFAULT_ALLOWED_SERVERS=1370798053899894926
 
 # Comma-separated list of user IDs with elevated permissions (e.g., id, id, id)
-STAFF=642749164165267466
+STAFF=642749164165267466, 1239009609835085854, 995070342173294682
 
 # Enable or disable caching for faster server loading (true/false)
 CACHE =disable
@@ -34,9 +34,9 @@ PREFIX=sfu!
 STATUS=
 
 # Bot Logs
-JoinChannel = 1399520260847046767
-LeaveChannel =1399520260847046767
-SHARD_CHANNEL = 1399520260847046767
+JoinChannel = 1400457387558830132
+LeaveChannel =1400457387558830132
+SHARD_CHANNEL = 1394308167462027446
 
 # Roblox OAuth
 CLIENT_ID=3000088594173951496
@@ -56,5 +56,6 @@ R2_URL =
 R2_TOKEN = 
 BUCKET = 
 FILE_URL =
+
 
 # ----------------------------------------
