Update .env configuration with new server IDs

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ ENVIRONMENT=production  # Set to "production" or "development"
 API_PORT=8001
 
 # Comma-separated list of server IDs allowed to use the bot (e.g., id, id, id)
-DEFAULT_ALLOWED_SERVERS=1370798053899894926
+DEFAULT_ALLOWED_SERVERS=1370798053899894926, 1352728307606622343, 1390884726536933468, 1347058450584174614, 1399119317303296070
 
 # Comma-separated list of user IDs with elevated permissions (e.g., id, id, id)
 STAFF=642749164165267466, 1239009609835085854, 995070342173294682
@@ -36,7 +36,7 @@ STATUS=
 # Bot Logs
 JoinChannel = 1400457387558830132
 LeaveChannel =1400457387558830132
-SHARD_CHANNEL = 1394308167462027446
+SHARD_CHANNEL = 1399520260847046767
 
 # Roblox OAuth
 CLIENT_ID=3000088594173951496
@@ -59,3 +59,4 @@ FILE_URL =
 
 
 # ----------------------------------------
+
