--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ BLOXLINK= # https://blox.link/
 KEY= # Must be 32 characters long if using the API
 
 # Bot Settings
-PREFIX=sfu!
+PREFIX=vs!
 STATUS=
 
 # Bot Logs
@@ -56,5 +56,6 @@ R2_URL =
 R2_TOKEN = 
 BUCKET = 
 FILE_URL =
+
 
 # ----------------------------------------
