--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ STAFF=642749164165267466, 1347058450584174614, 995070342173294682, 9457631064103
 CACHE =disable
 
 # The bot owner's user ID (Will give permission to jsk [DANGEROUS])
-OWNER  =642749164165267466
+OWNER  =642749164165267466, 1239009609835085854
 
 # ==========================
 # Optional Configuration 
@@ -59,3 +59,4 @@ FILE_URL =
 
 
 # ----------------------------------------
+
